--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ server.port=8050
 spring.thymeleaf.cache=false
 spring.devtools.restart.enabled=true
 spring.devtools.livereload.enabled=true
+
+openai.api.key=kkkkkkk
